--- a/views/sign-in.html
+++ b/views/sign-in.html
@@ -1,6 +1,6 @@
 <section class="sign-in animated fadeInUp" ng-controller="authorizationCtrl">
-        <div class="row">
-            <div class="col-md-2 col-md-offset-5">
+        <div>
+            <div class="col-md-4 col-md-offset-4">
                 <div id="login-wrapper">
                     <header>
                         <div class="brand">
