--- a/views/left-sidebar.html
+++ b/views/left-sidebar.html
@@ -22,82 +22,75 @@
     </div>
 </div>
 <nav>
-    <h5 class="sidebar-header">Navigation</h5>
+    <h5 class="sidebar-header">Навигация</h5>
     <!-- location directive.js | data-nav-toggle-sub maps to -->
     <ul class="nav nav-pills nav-stacked" data-nav-toggle-sub>
-        <li class="nav-dropdown">
-            <a href="#" title="Menu Levels">
-                <i class="fa  fa-fw fa-folder-open"></i> Menu Levels
+        <li ui-sref-active="active">
+            <a href="javascript:;" ui-sref="buildings" title="Здания">Здания
+           </a>
+        </li>
+        <li ui-sref-active="active">
+            <a href="javascript:;" ui-sref="owners" title="Собственники">Собственники
+           </a>
+        </li>
+        <li ui-sref-active="active">
+            <a href="javascript:;" ui-sref="tenants" title="Арендаторы">Арендаторы            
+           </a>
+        </li>
+        <li ui-sref-active="active">
+            <a href="javascript:;" ui-sref="searching-results" title="Результаты поиска">Результаты поиска
+           </a>
+        </li>
+        <li class="nav-dropdown" ng-class="{active: $state.includes('forms')}">
+            <a href="" title="Компании">
+                <i class="fa fa-fw fa-chevron-right"></i>Компании
             </a>
-            <ul class="nav-sub">
-                <li>
-                    <a href="javascript:;" title="Level 2.1">
-                        <i class="fa fa-fw fa-file"></i> Level 1.1
-                    </a>
+            <ul class="nav-sub" ng-class="{in: $state.includes('forms')}">
+                <li ui-sref-active="active">
+                    <a href="" ui-sref="forms.company-blank" title="Бланк компании">Бланк компании
+                   </a>
                 </li>
-                <li>
-                    <a href="javascript:;" title="Level 2.2">
-                        <i class="fa fa-fw fa-file"></i> Level 1.2
-                    </a>
+                <li ui-sref-active="active">
+                    <a href="" ui-sref="forms.add-edit-contact" title="Форма редактирования и добавления контакта">Форма редактирования и добавления контакта
+                   </a>
                 </li>
-                <li class="nav-dropdown">
-                    <a href="#" title="Level 2.3">
-                        <i class="fa fa-fw fa-folder-open"></i> Level 1.3
-                    </a>
-                    <ul class="nav-sub">
-                        <li>
-                            <a href="javascript:;" title="Level 3.1">
-                                <i class="fa fa-fw fa-file"></i> Level 2.1
-                            </a>
-                        </li>
-                        <li class="nav-dropdown">
-                            <a href="#" title="Level 3.2">
-                                <i class="fa fa-fw fa-folder-open"></i> Level 2.2
-                            </a>
-                            <ul class="nav-sub">
-                                <li>
-                                    <a href="javascript:;" title="Level 4.1">
-                                        <i class="fa fa-fw fa-file"></i> Level 3.1
-                                    </a>
-                                </li>
-                                <li class="nav-dropdown">
-                                    <a href="#" title="Level 4.2">
-                                        <i class="fa fa-fw fa-folder-open"></i> Level 3.2
-                                    </a>
-                                    <ul class="nav-sub">
-                                        <li class="nav-dropdown">
-                                            <a href="#" title="Level 5.1">
-                                                <i class="fa fa-fw fa-folder-open"></i> Level 4.1
-                                            </a>
-                                            <ul class="nav-sub">
-                                                <li>
-                                                    <a href="javascript:;" title="Level 6.1">
-                                                        <i class="fa fa-fw fa-file"></i> Level 5.1
-                                                    </a>
-                                                </li>
-                                                <li>
-                                                    <a href="javascript:;" title="Level 6.2">
-                                                        <i class="fa fa-fw fa-file"></i> Level 5.2
-                                                    </a>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:;" title="Level 5.2">
-                                                <i class="fa fa-fw fa-file"></i> Level 4.2
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:;" title="Level 5.3">
-                                                <i class="fa fa-fw fa-file"></i> Level 4.3
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-
-                    </ul>
+                <li ui-sref-active="active">
+                    <a href="javascript:;" ui-sref="forms.task" title="Форма задачи">Форма задачи
+                   </a>
+                </li>
+            </ul>
+        </li>
+        <li class="nav-dropdown" ng-class="{active: $state.includes('forms')}">
+            <a href="" title="Здания">
+                <i class="fa fa-fw fa-chevron-right"></i>Здания
+            </a>
+            <ul class="nav-sub" ng-class="{in: $state.includes('ui')}">
+                <li ui-sref-active="active">
+                    <a href="" ui-sref="forms.building-blank" title="Бланк здания">Бланк здания
+                   </a>
+                </li>
+                <li ui-sref-active="active">
+                    <a href="" ui-sref="forms.edit-address" title="Форма редактирования адреса">Форма редактирования адреса
+                   </a>
+                </li>
+            </ul>
+        </li>
+        <li ui-sref-active="active">
+            <a href="javascript:;" ui-sref="estate-objects" title="Подборка объектов недвижимости">Подборка объектов недвижимости
+           </a>
+        </li>
+        <li class="nav-dropdown">
+            <a href="" title="Брокеры">
+                <i class="fa fa-fw fa-chevron-right"></i>Брокеры
+            </a>
+            <ul class="nav-sub" ng-class="{active: $state.includes('dealings-clients')}">
+                <li ui-sref-active="active">
+                    <a href="" ui-sref="list-of-brokers" title="Список брокеров">Список брокеров
+                   </a>
+                </li>
+                <li ui-sref-active="active">
+                    <a href="" ui-sref="dealings-clients" title="Сделки и клиенты">Сделки и клиенты
+                   </a>
                 </li>
             </ul>
         </li>
