--- a/views/search-panel/search-digits-alphabet.html
+++ b/views/search-panel/search-digits-alphabet.html
@@ -76,3 +76,14 @@
           <button type="button" class="btn btn-default btn-trans"><span>Z</span></button>
         </div>    
       </div>
+      <div class="form-group search-block-input alphabet" 
+           ng-if="$state.current.name != 'buildings' && $state.current.name != 'search-results' && $state.current.name != 'estate-objects'">
+        <div class="search-block-inline-input">
+            <label class="control-label label-1">Метраж:</label>
+            <div>
+                <input type="text" class="form-control">
+                &#8212;
+                <input type="text" class="form-control">
+            </div>
+        </div>                                       
+    </div>
